# stableaudio-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: c-api-build.yml
crates/llama-rs-sys/: Cargo.toml  build.rs
crates/stable-audio/: Cargo.toml
crates/stable-audio-capi/: Cargo.toml  cbindgen.toml
crates/stable-audio-capi/include/: stable_audio.h
crates/stable-audio-capi/src/: lib.rs
crates/stable-audio/examples/: audio-to-audio.rs  continuation.rs  inpainting.rs  medium.rs  small-music.rs  small-sfx.rs
crates/stable-audio/src/: error.rs  lib.rs
crates/stable-audio/src/audio/: mod.rs  wav.rs
crates/stable-audio/src/ggml_runtime/: decoder.rs  dit.rs  dit_medium.rs  encoder.rs  gguf.rs  mod.rs  t5gemma.rs  tensors.rs  weights.rs
crates/stable-audio/src/sa3/: conditioning.rs  mod.rs
crates/stable-audio/src/text/: mod.rs
crates/stable-audio/tools/gguf/: README.md  pyproject.toml
crates/stable-audio/tools/gguf/src/stable_audio_gguf_tools/: __init__.py  convert_sa3_sfx.py
docs/: building.md
python/stableaudio/: README.md  pyproject.toml
python/stableaudio/examples/: gradio_app.py  medium.py  small_music.py  small_sfx.py
python/stableaudio/src/stableaudio/: __init__.py  models.py
